I edited the read me file

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     overflow-x: hidden;
     overflow-y: scroll;
-    background-color: #C5C8D0;
 }
 
 #Main{
@@ -14,6 +13,7 @@ body{
 #Upper-part{
     height: 200px;
     width: 1400px;
+    background-color: #C5C8D0;
 }
 
 .background-container{
@@ -35,3 +35,21 @@ body{
 #footer, p{
     color: black;
 }
+
+.Buttons{
+    display: flex;
+    align-items: flex-start;
+    background-color: #C5C8D0;
+}
+
+button {
+    padding: 10px 20px;
+    margin: 2px;
+    justify-content: flex-end;
+    background-color: #a10f3d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
